@@ -9,6 +9,8 @@ BUGS
 
 Is setting thumbnailers from the Set Icon box sensible UI?
 
+Installing an icon theme isn't an error!
+
 
 			FEATURES FOR 2.1
 
