@@ -29,6 +29,7 @@ void pinboard_set_backdrop_box(void);
 void pinboard_set_backdrop_app(const gchar *app);
 GdkWindow *pinboard_get_window(void);
 void pinboard_add_widget(GtkWidget *widget);
+void pinboard_update_size(void);
 void draw_label_shadow(WrappedLabel *wl, GdkRegion *region);
 void pinboard_set_backdrop(const gchar *path, BackdropStyle style);
 
