@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+06-Mar-2004
+~~~~~~~~~~~
+Cope with XRandR screen resizing (Geoff Youngs and Tom Morton).
+
 01-Mar-2004
 ~~~~~~~~~~~
 Can now filter files by name, using normal shell (glob) patterns (Stephen 
@@ -67,7 +71,8 @@ Work out which include file we need for getxattr (Stephen Watson).
 
 02-Dec-2003
 ~~~~~~~~~~~
-Allow editing a symlink's target from the Properties box (Arnaud Calvo).
+Allow editing a symlink's target from the Properties box (suggested by Arnaud
+Calvo).
 Experimental extended attributes support for setting MIME types (Stephen
 Watson).
 
